# syntheticdatagenerator

./: LICENSE  README.md  pyproject.toml  setup.py
syntheticdatagenerator/: requirements.txt  syntheticdatagenerator.py
syntheticdatagenerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py
